# aridlink_1

./: README.md
firmware/: .gitignore  CMakeLists.txt
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  mqtt.c  mqtt.h  scheduler.c  scheduler.h  shadow.c  shadow.h  wifi.c  wifi.h
